src/objects/Som_QuotexTv__c.object
<CustomObject>
    <description>Rohdaten aus dem System Pinball/Quotex, auf Ebene Werbeträger für Medienklasse FERNSEHEN</description>
    <fields>
        <fullName>Som_Brutto__c</fullName>
        <description>Brutto-Umsatz laut Nielsen</description>
        <inlineHelpText>Brutto-Umsatz laut Nielsen</inlineHelpText>
        <label>Brutto</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Som_Jahr__c</fullName>
        <description>Geschäftsjahr</description>
        <inlineHelpText>Geschäftsjahr</inlineHelpText>
        <label>Jahr</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Som_NielsenId__c</fullName>
        <description>Nielsen-ID laut Pinball</description>
        <inlineHelpText>Nielsen-ID laut Pinball</inlineHelpText>
        <label>Nielsen-ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Som_NielsenName__c</fullName>
        <description>Nielsen-Firmenname</description>
        <inlineHelpText>Nielsen-Firmenname</inlineHelpText>
        <label>Nielsen-Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Som_ProRexId__c</fullName>
        <description>Accountnummer des Kunden</description>
        <inlineHelpText>Accountnummer des Kunden</inlineHelpText>
        <label>Accountnummer</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Som_Quotexdaten__c</fullName>
        <label>Quotexdaten</label>
        <referenceTo>Som_Quotex__c</referenceTo>
        <relationshipLabel>Quotexdaten TV</relationshipLabel>
        <relationshipName>Quotexdaten_TV</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Som_Vermarkter__c</fullName>
        <description>Vermarkter laut Nielsen</description>
        <inlineHelpText>Vermarkter laut Nielsen</inlineHelpText>
        <label>Vermarkter</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Som_Werbetraeger__c</fullName>
        <description>Nielsen-Werbeträger</description>
        <inlineHelpText>Nielsen-Werbeträger</inlineHelpText>
        <label>Werbeträger</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Som_ZeitraumTyp__c</fullName>
        <description>GJ=Gesamtjahr, YTM=YearToMonth</description>
        <inlineHelpText>GJ=Gesamtjahr, YTM=YearToMonth</inlineHelpText>
        <label>Zeitraum</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Quotexdaten TV</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Som_Brutto__c</columns>
        <columns>Som_Jahr__c</columns>
        <columns>Som_NielsenId__c</columns>
        <columns>Som_NielsenName__c</columns>
        <columns>Som_ProRexId__c</columns>
        <columns>Som_Vermarkter__c</columns>
        <columns>Som_Werbetraeger__c</columns>
        <columns>Som_ZeitraumTyp__c</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <nameField>
        <displayFormat>QuoTv-{0000}</displayFormat>
        <label>Quotexdaten TV-Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotexdaten TV</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>